<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layoutIcons"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/layoutIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iconDisagree"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_disagree"
            android:contentDescription="@string/disagree"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/iconNeutral"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_neutral"
            android:contentDescription="@string/neither_disagree_nor_agree"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/iconAgree"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_agree"
            android:contentDescription="@string/agree" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
